--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cd client && npm run build && cd ../ && node ./bin/www"
+    "start": "node ./bin/www",
+		"build": "cd client && npm run build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
