--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "api",
-  "version": "0.0.0",
+  "name": "my_portfolio",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "cd client && npm run build && cd ../ && node ./bin/www"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "dotenv": "^16.0.3",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "nodemailer": "^6.9.1"
+    "next": "13.2.4",
+    "nodemailer": "^6.9.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4"
   }
 }
